# dot-dynamic-scopes

./: .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
dot_dynamic_scopes/: __init__.py  _version.py  admin.py  apps.py  models.py  scopes.py  settings.py  signals.py  views.py
dot_dynamic_scopes/migrations/: 0001_initial.py  0002_alter_scope_id.py
