[tool.poetry]
name = "dot-dynamic-scopes"
version = "1.0.0"
description = "Django OAuth Toolkit extension to allow scopes to be provided by a Django model."
authors = ["Matt Pryor <matt.pryor@stfc.ac.uk>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
django-oauth-toolkit = "*"
django-settings-object = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
